--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
-        <script src="main.js"></script>
+        <script src="main.js" defer></script>
     </head>
     <body>
         <button type="button" id="Pick">What to do?</button>
