Better visual differences and more options

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     </head>
     <body>
         <button type="button" id="Pick">What to do?</button>
-        <div id="randombox"></div>
+        <div id="namebox"></div>
+        <div id="genericText">This can include:</div>
+        <div id="option1"></div>
+        <div id="option2"></div>
+        <div id="option3"></div>
     </body>
 </html>
