Added title and made style tweaks

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Downtime & Decisions</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <script src="main.js" defer></script>
     </head>
     <body>
+        <h1>Downtime & Decisions</h1>
         <button type="button" id="Pick">What to do?</button>
         <div id="namebox"></div>
         <div id="genericText">This can include:</div>
